--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1315,6 +1315,10 @@ section.post-section .post-container .post-item .post-content{
   text-align:justify;
   margin:5px 10px 15px 10px;
 }
+
+.post-comment .post-comment-item .post-comment-text .comment-action{ 
+  width:100%;
+}
 .post-comment .post-comment-item .post-comment-text .comment-avathar {
   width:40px;
   height:40px
