--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1347,8 +1347,17 @@ section.post-section .post-container .post-item .post-content{
 .replay-list .replay-list-item .replay-list-text .replay-avathar {
   width:40px;
   height:40px
+} 
+.post-wrap div.selected-files {
+  width:100%;
+  display:flex;
+  flex-wrap:wrap;
+  align-items:center;
 }
-
+.post-wrap div.selected-files .selected-item {
+  width:20%;
+  padding:10px 15px 
+} 
 
 
 
