--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -137,7 +137,7 @@
     text-rendering: optimizeLegibility;
     overflow: hidden;
     font-family: 'Poppins', sans-serif;
-    background: #f2f7fb;
+    background: #EFEFEF;
   }
   :root {
     overflow-y: scroll;
@@ -274,7 +274,7 @@
   width: 100%;
   height: auto;
 }
-nav.navbar { width: 100vw;padding: 10px; position: fixed;background: #ffff;z-index: 100;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 0 10px 0;top: 0}
+nav.navbar { width: 100%;padding: 10px; position: fixed;background: #ffff;z-index: 100;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 0 0 0;top: 0; border-bottom: 1px solid #dadada;}
 .navbar-brand img{height: 50px;}
 main{ margin-top: 80px;}
 .category{
@@ -282,6 +282,19 @@ main{ margin-top: 80px;}
   display: flex;
   align-items: center;
 }
+
+nav.navbar .dropdown .nav-link.dropdown-toggle {
+  padding-right: 20px;
+  background: url(../images/chevron-down.svg) no-repeat center;
+  background-position-x: 100%;
+  background-size: 12px;
+  color: #000;
+}
+
+nav.navbar .dropdown .nav-link.dropdown-toggle:after {
+  display: none;
+}
+
 .category .category-image {
   width: 50px;
   transition: all .25s ease-in-out;
@@ -1361,13 +1374,13 @@ section.post-section .post-container .post-item .post-content{
 
 
 
-.side_bar { width: 270px;height: 100vh;padding: 30px;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px}
+.side_bar { width: 270px;height: 100vh;padding: 30px 0;overflow: hidden;position: fixed;background: #ffff;z-index: 99;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 10px 10px 0;top: 80px;     border: 1px solid #dadada;}
 .side-bar-logo {margin: 0 0 20px;}
 .side-nav-toggle {display: none;}
 .sidebar-content {overflow: auto;height: 100%;padding: 0 0 50px;}
 .sidebar-content::-webkit-scrollbar {display: none;}
 .sidebar-content ul li.side-item{margin: 0 0 2px;}
-.sidebar-content ul li.side-item a {padding: 10px 10px;display: flex;align-items: center;color: #000;cursor: pointer;position: relative;border-radius: 8px;}
+.sidebar-content ul li.side-item a {padding: 10px 30px;display: flex;align-items: center;color: #000;cursor: pointer;position: relative;border-radius: 8px;}
 .sidebar-content ul li.side-item a:hover {background: #000;color: #fff;}
 .sidebar-content ul li.side-item.active a {background: #000;color: #fff;}
 .sidebar-content ul li.side-item.logout {padding: 25px 0 0 0;position: relative;}
