--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
 /* CSS Document */
 ::-moz-selection {
@@ -111,7 +111,7 @@
     font: inherit;
     vertical-align: baseline;
     outline: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: "DM Sans", sans-serif;
   }
   /* HTML5 display-role reset for older browsers */
   article,
@@ -136,7 +136,7 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
     overflow: hidden;
-    font-family: 'Poppins', sans-serif;
+    font-family: "DM Sans", sans-serif;
     background: #EFEFEF;
   }
   :root {
@@ -147,7 +147,7 @@
     transition: all 0.25s ease-out 0s;
   }
   p {
-    font-family: 'Poppins', sans-serif;
+    font-family: "DM Sans", sans-serif;
   }
   img {
     border: 0px;
@@ -276,7 +276,7 @@
 }
 nav.navbar { width: 100%;padding: 10px; position: fixed;background: #ffff;z-index: 100;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 0 0 0;top: 0; border-bottom: 1px solid #dadada;}
 .navbar-brand img{height: 50px;}
-main{ margin-top: 80px;}
+main{ margin-top: 120px;}
 .category{
   width: 100%;
   display: flex;
