--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -235,7 +235,7 @@
     width: 100%;
     float: left;
   }
-.container{max-width: 100%;}
+.container{max-width: 100%; padding: 0;}
 
 /* ------------------------------------------------------------------------------- */
 
