--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -279,7 +279,7 @@ main{ margin-top: 120px;}
 .category{
   width: 100%;
   display: flex;
-  flex: 1 0 0;
+  flex-wrap: wrap;
   align-items: center;
 }
 
