--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -283,7 +283,7 @@ main{ margin-top: 120px;}
   align-items: center;
 }
 
-
+.learn-section .col-md-6{margin: 0 0 20px;}
 .learn-section .col-md-6 .card {border-radius: 5px; border: none;}
 .category .progress-area {width: 100%; margin: 10px 0 0;}
 .learn-section .col-md-6 .card .card-body { padding: 30px;}
