--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -285,8 +285,16 @@ main{ margin-top: 120px;}
 
 .learn-section .col-md-6{margin: 0 0 26px;}
 .learn-section .col-md-6 .card {border-radius: 5px; border: none;}
-.category .progress-area {width: 100%; margin: 10px 0 0;}
+.category .progress-area {width: 100%; margin: 10px 0 0;display: flex; flex-wrap: wrap;  align-items: center;}
 .learn-section .col-md-6 .card .card-body { padding: 30px;}
+
+.category .progress-area progress {
+  flex: 1 0 0;
+}
+
+.category .progress-area span {
+  margin: 0 0 0 12px;
+}
 
 nav.navbar .dropdown .nav-link.dropdown-toggle {
   padding-right: 20px;
