--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -419,29 +419,66 @@ button.close {
   font-size:17px;
 }
 .lesson .lesson-body{
-  margin-top: 10px;
+  margin-top: 50px;
+}
+
+.lesson .lesson-body .col-md-6 {
+  margin: 0 0 26px;
 }
 .lesson .lesson-row {
-  width:100%;
-  border:1px solid #6c757d;
+  width: 100%;
   color: #000;
-  border-radius:10px;
-  padding:10px;
-  margin:10px;
+  border-radius: 5px;
+  padding: 30px;
+  margin: 0 0 0;
+  background: #fff;
+  text-align: center;
+  position: relative;
+  border: 1px solid #ffff;
+  transition: all .25s ease-in-out;
 }
 .lesson .lesson-row:hover {
   box-shadow: 4px 0px 16px 0px #0000000A;
-  border:1px solid #ef9b10;
+  border:1px solid #FBAE1E;
 
 }
 .lesson .lesson-row-title{
-  width:100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  font-weight:500;
-  font-size:16px
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
+  font-size: 16px;
+
 }
+
+.lesson .lesson-row-title .lesson-line {
+  position: absolute;
+  background: #E7E7E7;
+  padding: 6px 14px;
+  border-radius: 5px;
+  font-size: 17px;
+  left: 18px;
+  top: 18px;
+  transition: all .25s ease-in-out;
+}
+
+.lesson .lesson-row:hover .lesson-line {
+  background: #F0D987;
+}
+
+.lesson .lesson-row-title  h3 {
+  width: 100%;
+  font-size: 24px;
+  margin: 0 0 10px;
+}
+
+.lesson .lesson-row-title h4 {
+  width: 100%;
+  font-size: 24px;
+}
+
 .lesson .lesson-row-subtitle{
   width:100%;
     display: flex;
