--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -477,6 +477,7 @@ button.close {
 .lesson .lesson-row-title h4 {
   width: 100%;
   font-size: 24px;
+  color: #6E6E6E;
 }
 
 .lesson .lesson-row-subtitle{
