--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1511,3 +1511,9 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 
 
 }
+
+@media screen and (max-width:991px) {
+.side_bar { margin-left: -100%;}
+.content_outer {padding-left: 30px;}
+
+}
