--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -402,12 +402,13 @@ button.close {
 }
 .exam-container .container-wrap {
   width: 100%;
-  float: left;
+  float: none;
   padding: 20px;
-  margin:20px 30px;
+  margin:50px auto 0;
   background: #ffff;
   box-shadow: 4px 0px 16px 0px #0000000A;
   border-radius: 10px;
+  max-width: 1320px;
 }
 .lesson .lesson-title {
   margin: 0 30px;
@@ -514,6 +515,34 @@ margin-left:auto;
   margin:auto;
   border: none;
 }
+
+.exam-container .container-wrap .lesson .lesson-body {
+  margin: 24px 0 0;
+}
+
+.exam-container .container-wrap .lesson .lesson-body .video-title {
+  margin: 0 0 50px;
+}
+
+.exam-container .container-wrap .lesson .lesson-body .video-container {
+  max-width: 940px;
+  margin: 0 auto;
+}
+
+.exam-container .container-wrap .lesson .lesson-body .video-container iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.exam-container .container-wrap .lesson .lesson-body .video-container .videoframe {
+  width: 100%;
+  position: relative;
+  padding-bottom: 56%;
+}
+
 .progress-area progress {
   width:90%;
   height:6px;
