--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -495,6 +495,7 @@ button.close {
   margin: 0 auto;
   width:100%;
   padding:0;
+  background: #E1E4EE;
 }
 
 .lesson-pagination .lesson-left,.lesson-pagination .lesson-previus {
