--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -577,6 +577,7 @@ margin-left:auto;
 
 #finish-exam-confirm .modal-content {
   padding: 10px;
+  border-radius: 10px;
 }
 
 #finish-exam-confirm .modal-content .modal-header {
