--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1663,6 +1663,18 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 #review-history-modal .modal-content .table-outer table { min-width: 418px;}
 
 
+
+.set-container .container-wrap {width: 90%;float: none; padding: 50px; margin: 50px auto 0; background: #ffff; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; max-width: 1320px;}
+.set-container .lesson .lesson-row { border: 1px solid #C8C8C8; text-align: center;}
+.set-container .lesson .lesson-row .lesson-row-sets { justify-content: center;}
+.set-container .lesson .lesson-row .lesson-row-title { margin: 0 0 20px;}
+.set-container .lesson .lesson-row .lesson-row-sets .sets-item { border: 1px solid #90C3A0; padding: 5px 14px; font-size: 19px;}
+.set-container .lesson .lesson-row .lesson-row-sets .sets-item:hover {background: #D1ECD9;}
+.set-container .lesson .lesson-row:hover { border-color: #FBAE1E;}
+
+
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
