--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1664,7 +1664,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 
 
 
-.set-container .container-wrap {width: 90%;float: none; padding: 50px; margin: 50px auto 0; background: #ffff; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; max-width: 1320px;}
+.set-container .container-wrap {width: 90%;float: none; padding: 50px; margin: 0 auto 0; background: #ffff; box-shadow: 4px 0px 16px 0px #0000000A; border-radius: 10px; max-width: 1320px;}
 .set-container .lesson .lesson-row { border: 1px solid #C8C8C8; text-align: center;}
 .set-container .lesson .lesson-row .lesson-row-sets { justify-content: center;}
 .set-container .lesson .lesson-row .lesson-row-title { margin: 0 0 20px;}
