--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1703,6 +1703,10 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .modal-expand.modal-expand-result-section .exam-result .exam-result-content .exam-mark-bottom a#review-link:hover {  color: #ECB301;  background: none;}
 
 
+#review-history-modal .modal-content .table-outer table#attemt-list-table {min-width: 594px;}
+#review-history-modal .modal-content .table-outer table#attemt-list-table td {text-align: left;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
