--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1710,7 +1710,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card .action-button {width: 100%; margin: 30px 0 0;}
 .card .action-button .btn { background: #FBAE1E; border: 1px solid #FBAE1E; width: 100%; max-width: 275px; color: #fff;}
 .card .action-button .btn:hover {  background: #1989F8; border-color: #1989F8;}
-
+.topic-section .category {align-items: start;}
 
 .exam-container .summery-wrap { width: 100%; max-width: 1320px; margin: 50px auto 0; padding: 50px;}
 .exam-container .summery-wrap h2 { font-size: 20px; font-weight: 500;  color: #000000;  margin: 0 0 20px;}
