--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1732,6 +1732,10 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .question-preview .question-preview-body .exam-result .exam-mark-bottom a#review-link:hover { background: none; color: #FFA800;}
 
 
+.exam-overview .exam-overview-content table { border-radius: 10px; border-collapse: separate; overflow: hidden; min-width: 900px; border: 1px solid #D0D0D0;}
+.exam-overview .exam-overview-content .overview-table { overflow-x: auto;}
+.exam-overview .exam-overview-content table tr th { border-color: rgb(0 0 0 / 10%) !important; background: #ECECEC;}
+
 
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
