--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1088,7 +1088,7 @@ border-radius: 7px;
 .exam-list .exam-title {
   display:flex;
   width:100%;
-  margin:5px;
+  margin:0 0 20px;
   border:1px solid #C0C0C0;
   border-radius:10px;
   padding: 15px 20px;
