--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -397,7 +397,7 @@ button.close {
 .exam-container{
   width: 100%;
   margin-top: 40px;
-  padding: 50px 0;
+  padding: 50px 30px;
   height: 100%;
   min-height: 89vh;
 }
@@ -1724,7 +1724,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card .action-button .btn:hover {  background: #1989F8; border-color: #1989F8;}
 .topic-section .category {align-items: start;}
 
-.exam-container .summery-wrap { width: 100%; max-width: 1320px; margin: 50px auto 0; padding: 50px;}
+.exam-container .summery-wrap { width: 90%; max-width: 1320px; margin: 50px auto 0; padding: 50px;}
 .exam-container .summery-wrap h2 { font-size: 20px; font-weight: 500;  color: #000000;  margin: 0 0 20px;}
 .exam-container .summery-wrap p { color: #787878;  font-size: 20px; margin: 0 0 20px; line-height: 1.56;}
 .exam-container .summery-wrap .summery-action {  width: 100%;text-align: center;}
