--- a/public/app/css/stylesheet.css
+++ b/public/app/css/stylesheet.css
@@ -212,8 +212,11 @@ section{width: 100%; float: left;}
 .course-wrapp .learn-more:hover { color: #1989F8;  background: none;}
 
 
-
-
+.exam-container .question-bank {padding: 0;}
+.exam-container .question-bank .lesson .lesson-body .mcq-container {width: 100%; padding: 50px; display: flex; flex-wrap: wrap; justify-content: space-between; position: relative;}
+.exam-container .question-bank .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 0 35px 0 0;}
+.exam-container .question-bank .lesson .lesson-body .mcq-container .mcq-answer { width: 50%; padding: 0 0 0 35px;}
+.exam-container .question-bank .lesson .lesson-body .mcq-container:after { content: ""; position: absolute; width: 1px; height: 100%; top: 0; left: 50%; transform: translateX(-50%); background: #1599f2;}
 
 
 @media (min-width:1500px){
