--- a/public/assets/css/stylesheet.css
+++ b/public/assets/css/stylesheet.css
@@ -378,6 +378,8 @@ footer .footer-row1 p { font-size: 16px; color: #fff; font-weight: 500;}
 .price-wrapp .note h3 { position: relative; font-size: 20px; font-weight: 400; color: #696969; max-width: 730px; text-align: left; margin: 0 auto; padding-left: 115px;}
 .price-wrapp .note h3 span {position: absolute; left: 0; top: 0; color: #000000; padding-left: 35px; background: url(../images/ic_round-star.svg) no-repeat center left;}
 
+.price-wrapp .price-row1 .gif img { width: 100%; height: 50px; object-fit: cover;  object-position: center;}
+
 
 .unsure-wrapp { padding: 50px 0; background: #EDFCF7;}
 .unsure-wrapp .unsure-row { width: 100%; max-width: 825px; margin: 0 auto; display: flex; flex-wrap: wrap; align-items: center;}
