--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1708,7 +1708,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .modal-expand.modal-expand-result-section { position: relative; top: 0; width: 100%; margin-top: 40px; padding: 50px 0; height: 100%; min-height: 95vh; background: no-repeat;}
 .modal-expand.modal-expand-result-section .container-wrap { width: 90%; float: none;  padding: 50px;  margin: 50px auto 0;  background: #ffff;  box-shadow: 4px 0px 16px 0px #0000000A;  border-radius: 10px;  max-width: 1320px;}
 .modal-expand.modal-expand-result-section .question-preview-title h3 {  font-size: 22px;  font-weight: 500;  color: #1989F8;  padding: 20px 0;}
-.modal-expand.modal-expand-result-section .exam-result .exam-result-content .exam-mark-title {  background: #EEEEEE;}
+.modal-expand.modal-expand-result-section .exam-result .exam-result-content .exam-mark-title {  background: #EEEEEE; margin: 0 0 20px;}
 .modal-expand.modal-expand-result-section .exam-result .exam-result-content .card {  margin: 0  0 20px;}
 .modal-expand.modal-expand-result-section .exam-result .exam-result-content p {  margin: 0 0 20px;}
 .modal-expand.modal-expand-result-section .exam-result .exam-result-content .exam-mark-bottom a#review-link { background: #ECB301;  color: #fff;  border: 1px solid #ECB301;  font-size: 20px;}
@@ -1730,14 +1730,14 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .exam-container .summery-wrap .summery-action {  width: 100%;text-align: center;}
 .exam-container .summery-wrap .summery-action .btn { background: #FBAE1E; padding: 10px 50px; color: #FFFFFF; font-size: 16px; margin: 0 auto;}
 .exam-container .summery-wrap .summery-action .btn:hover { color: #FBAE1E; background: none;}
-
+.exam-result .exam-result-content .card-body { border: 1px solid #cfcfcf; text-align: center;}
 
 .question-preview .question-preview-body .card {border: none; text-align: left;}
 .question-preview .question-preview-body .card .exam-mark-body { padding: 0;}
 .question-preview .question-preview-body .card .mark-label { margin: 0 0 20px; display: block; font-size: 17px;}
 .question-preview .question-preview-body .card .mark-title h3 { font-size: 18px;}
 .question-preview .question-preview-body .card .mark-title h3 { color: #000; font-weight: 500; margin: 0 0 20px;}
-.question-preview .question-preview-body .card .mark-label span {display: block; margin: 0 0 5px;}
+.question-preview .question-preview-body .card .mark-label span {display: inline; margin: 0 0 5px;}
 .question-preview .question-preview-body .exam-result { text-align: left;}
 .question-preview .question-preview-body .exam-result p { font-size: 18px; margin: 0 0 20px;}
 .question-preview .question-preview-body .exam-result .exam-mark-bottom a#review-link { color: #fff; background: #FFA800; border: 1px solid #FFA800;}
