--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1759,6 +1759,19 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .exam-container .question-bank .lesson .lesson-body .mcq-container .mcq-group h3 {font-size: 20px; font-weight: 500; color: #000000; margin: 0 0 20px;}
 
 
+.exam-container .question-bank-review { max-width: 100%; padding: 0; position: relative;}
+.exam-container .question-bank-review .lesson .lesson-body { margin: 0;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container { width: 100%; display: flex; flex-wrap: wrap;  padding: 50px 50px 0;  position: relative;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group { width: 50%; padding: 0 35px 0 0;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right { width: 50%;  padding: 0 0 0 35px;}
+.exam-container .question-bank-review .lesson .lesson-body  .col-md-12 { padding: 0;}
+.exam-container .question-bank-review .lesson  .lesson-exit { position: absolute; top: 50px; left: 40px;}
+.exam-container .question-bank-review .lesson .lesson-body h3 { font-size: 20px; font-weight: 500; color: #000000; margin: 0 0 20px; padding: 0 0 0 35px;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container:after { content: ""; position: absolute; width: 1px; height: 100%; top: 0; left: 50%; transform: translateX(-50%);  background: #1599f2;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination { margin: 30px 0; display: inline-block;}
+.exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn { display: inline-block;}
+
+
 @media screen and (max-width:1500px) {
 .lesson .lesson-row { padding-top: 56px;}
 
