--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -627,6 +627,7 @@ margin-left:auto;
 .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check {
   padding-left: 45px;
   margin: 0 0 20px;
+  font-size: 20px;
 }
 
 .exam-container .container-wrap .lesson .lesson-body .mcq-container .form-group .form-check input {
@@ -1145,6 +1146,7 @@ border-radius: 7px;
   margin:5px 15px;
   display:flex;
   align-items:center; 
+  font-size: 20px;
 }
 .form-progress-ans .form-progress label{
   width:max-content;
@@ -1154,7 +1156,7 @@ border-radius: 7px;
   width:max-content;
   min-width:400px; 
   margin: 0 5px;
-  height:10px
+  height:22px;
 }
 .form-progress-ans .form-progress progress::-webkit-progress-bar {
   background-color: #ffffff;  
