--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1772,6 +1772,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .exam-container .question-bank-review .lesson .lesson-body .mcq-container:after { content: ""; position: absolute; width: 1px; height: 100%; top: 0; left: 50%; transform: translateX(-50%);  background: #1599f2;}
 .exam-container .question-bank-review .lesson #lesson-footer-pagination { margin: 30px 0; display: inline-block;}
 .exam-container .question-bank-review .lesson #lesson-footer-pagination button.btn { display: inline-block;}
+.exam-container .question-bank-review .lesson .lesson-body .mcq-container .mcq-group-right .mcq-explanation { font-size: 20px; font-weight: 600; margin: 0 0 20px;}
 
 
 .card-links {border: none; border-radius: 10px;}
