--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -275,7 +275,7 @@
 }
 nav.navbar { width: 100%;padding: 10px; position: fixed;background: #ffff;z-index: 100;box-shadow: 4px 0px 16px 0px #0000000A;left: 0;border-radius: 0 0 0 0;top: 0; border-bottom: 1px solid #dadada;}
 .navbar-brand img{height: 50px;}
-main{ margin-top: 120px;}
+main{ margin-top:87px;}
 .category{
   width: 100%;
   display: flex;
@@ -1787,7 +1787,7 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 
 
 .card-calendar .card-body { padding: 30px;}
-.card-calendar .card-body h3 { font-size: 24px; color: #000000; font-weight: 400; margin: 0 0 26px;}
+.card-calendar .card-body h3 { font-size: 24px; color: #000000; font-weight: 600; margin: 0 0 26px;}
 .card-calendar .card-body .calendar { width: 100%;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view { justify-content: space-between; border-radius: 10px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month { width: 50% !important; border-right: 1px solid #ddd;}
@@ -1801,11 +1801,14 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-top .fc-daygrid-day-number { color: #000;  font-size: 12px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-events { width: 100%; height: 100%; top: 0;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-events .fc-event { min-height: 20px;}
-.card-calendar .card-body .calendar .calendar-body .fc-header-toolbar .fc-toolbar-chunk h2 { font-size: 28px;}
+.card-calendar .card-body .calendar .calendar-body .fc-header-toolbar .fc-toolbar-chunk h2 { font-size: 20px;}
+.card-calendar { border: none; border-radius: 10px;}
+.card-graph { border: none;  border-radius: 10px;}
+.card-progress { border: none;  border-radius: 10px;}
 
 
 .card-progress .card-body {padding: 30px;}
-.card-progress .card-body h3 { font-size: 20px; font-weight: 400; margin: 0 0 24px;}
+.card-progress .card-body h3 { font-size: 20px; font-weight: 600; margin: 0 0 24px;}
 .card-progress .card-body .session-chart { width: 100%; text-align: center;}
 .card-progress .card-body  .session-text { text-align: center; font-size: 20px; font-weight: 400; margin: 5px 0 0;}
 .card-progress .card-body .session-chart .donut-inner { margin: 10px 0 0; font-size: 20px; font-weight: 400;}
