--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -1779,8 +1779,8 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-links .card-body { padding: 25px; text-align: center;}
 .card-links .card-body h3 { font-size: 18px; font-weight: 400; margin: 0 0 20px;}
 .card-links .card-body .session-links { width: 100%;}
-.card-links .card-body .session-links .btn-outline-secondary { border: 1px solid #17C274; color: #000000; font-size: 20px;}
-.card-links .card-body .session-links .btn-outline-warning { border: 1px solid #FBAE1E; color: #000; font-size: 20px;}
+.card-links .card-body .session-links .btn-outline-secondary { border: 1px solid #17C274; color: #000000; font-size: 18px;}
+.card-links .card-body .session-links .btn-outline-warning { border: 1px solid #FBAE1E; color: #000; font-size: 18px;}
 .card-links .card-body .session-links span { display: inline-block; margin: 0 10px; font-size: 18px;}
 .card-links .card-body .session-links .btn-outline-secondary:hover { background: #17C274;color: #fff;}
 .card-links .card-body .session-links .btn-outline-warning:hover { background: #FBAE1E;color: #fff;}
@@ -1802,17 +1802,17 @@ span.active-icon {display: inline-block;width: 25px;margin-right: 10px; padding-
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-top .fc-daygrid-day-number { color: #000;  font-size: 12px;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-events { width: 100%; height: 100%; top: 0;}
 .card-calendar .card-body .calendar .calendar-body .fc-view-harness .fc-multiMonthFourMonth-view .fc-multimonth-month table tbody tr td .fc-daygrid-day-frame .fc-daygrid-day-events .fc-event { min-height: 20px;}
-.card-calendar .card-body .calendar .calendar-body .fc-header-toolbar .fc-toolbar-chunk h2 { font-size: 20px;}
+.card-calendar .card-body .calendar .calendar-body .fc-header-toolbar .fc-toolbar-chunk h2 { font-size: 18px;}
 .card-calendar { border: none; border-radius: 10px;}
 .card-graph { border: none;  border-radius: 10px;}
 .card-progress { border: none;  border-radius: 10px;}
 
 
 .card-progress .card-body {padding: 30px;}
-.card-progress .card-body h3 { font-size: 20px; font-weight: 700; margin: 0 0 24px;}
+.card-progress .card-body h3 { font-size: 20px; font-weight: 700; margin: 0 0 24px;}s
 .card-progress .card-body .session-chart { width: 100%; text-align: center;}
-.card-progress .card-body  .session-text { text-align: center; font-size: 20px; font-weight: 400; margin: 5px 0 0;}
-.card-progress .card-body .session-chart .donut-inner { margin: 10px 0 0; font-size: 20px; font-weight: 400;}
+.card-progress .card-body  .session-text { text-align: center; font-size: 18px; font-weight: 400; margin: 5px 0 0;}
+.card-progress .card-body .session-chart .donut-inner { margin: 10px 0 0; font-size: 18px; font-weight: 400;}
 
 
 
